--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1481,7 +1481,7 @@ input:checked + .slider::before {
 
 /* PROFILE page */
 .counter {
-    color: $secondlevel;
+    color: $medium;
 }
 
 /* see Enums/State */
