--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -357,7 +357,7 @@
         </table>
       {% endif %}
 
-      {# PREVIOUS/NEXT PAGE buttons #}
+      {# LOAD MORE button #}
       <div class='text-center page-buttons mt-2'>
         <button class='btn btn-primary ' type='button' id='loadMoreBtn' data-action='load-more'>{{ 'Load more'|trans }}</button>
       </div>
