--- a/src/templates/templates-view.html
+++ b/src/templates/templates-view.html
@@ -31,4 +31,5 @@
   <hr>
 {% endif %}
 {% include 'steps-links-view.html' %}
+{% include 'uploads.html' %}
 <div id='info' data-page='template-view' data-team='{{ App.Users.userData.team }}' data-type='experiments_templates' data-id='{{ Entity.id }}'></div>
