--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -97,7 +97,13 @@
   <h3 class='p-2 pl-3 section-title' id='attachedFiles'>{{ 'Attached files'|trans }}</h3>
   <div class='pl-3 mt-2'>
     {% set currentLimit = App.Request.query.get('limit')|default(15) %}
-    <p>{{ 'Displaying %d of %d attached files.'|trans|format(min(currentLimit, uploadsTotal), uploadsTotal) }}<a class='ml-3' href='?tab=2&limit={{ uploadsTotal }}'><button type='button' class='btn btn-sm btn-secondary' {{ currentLimit == uploadsTotal ? 'disabled' }}>{{ 'Show all'|trans }}</button></a></p>
+    <p>{{ 'Displaying %d of %d attached files.'|trans|format(min(currentLimit, uploadsTotal), uploadsTotal) }}
+      <a class='ml-3' href='?tab=2&limit={{ uploadsTotal }}'>
+        <button type='button' class='btn btn-sm btn-secondary' {{ currentLimit == uploadsTotal ? 'disabled' }}>{{ 'Show all'|trans }}</button>
+      </a>
+      <a class='ml-3' href='?tab=2&limit={{ uploadsTotal }}&order=filesize&sort=desc'><button type='button' class='btn btn-sm btn-secondary' {{ App.Request.query.get('order') == 'filesize' ? 'disabled' }}>{{ 'List biggest files first'|trans }}</button>
+      </a>
+    </p>
     {% include 'filter-input-snippet.html' with {'target': 'attachedFilesTable'} %}
     <table class='table' aria-describedby='attachedFiles' data-table-sort='true'>
       <thead>
