--- a/src/templates/mfa.html
+++ b/src/templates/mfa.html
@@ -2,9 +2,11 @@
 
 {% block body %}
 
-<section class='text-center'>
+<section class='text-center my-4'>
   <img src='/assets/images/logo.png' alt='elabftw' title='elabftw' class='col-md-3' />
-  <h4 class='mt-4'>{{ 'Two Factor Authentication'|trans }}</h4>
+  <h1 class='mt-4'><i class='mr-2 fas fa-mobile-screen'></i>{{ 'Two Factor Authentication'|trans }}</h1>
+</section>
+
   <form method='post' action='app/controllers/LoginController.php' autocomplete='off'>
     <input type='hidden' name='auth_type' value='mfa'>
     {% if App.Session.get('rememberme') == '1' %}
@@ -12,35 +14,55 @@
     {% endif %}
     {{ App.Session.get('csrf')|csrf }}
     {% if App.Session.has('enable_mfa') %}
-      <p>
+      <div class='col-md-6 text-center mx-auto my-4'>
+      <p class='text-muted'>{{ 'Enable two factor authentication for your account to increase its security. %sSee documentation%s.'|trans|format("<a class='external-link' target='_blank' rel='noopener' href='https://doc.elabftw.net/user-guide.html#what-is-two-factor-authentication'>", "</a>")|raw }}</p>
+      <p class='my-3'>
         {% if App.Session.has('enforce_mfa') %}
           {{ 'It is mandatory to activate 2FA.'|trans }}
           <br>
         {% endif %}
-        {{ 'Open your authenticator application and scan the QR code.'|trans }}
+        <span class='border rounded p-2'><i class='fas fa-1'></i></span>
+        {{ 'Open your authenticator application and scan the QR code'|trans }}
       </p>
-      <p><img alt='mfa-qrcode' src='{{ mfaQRCodeImageDataUri|raw }}' /></p>
-
-      <div class='text-center col-md-5 mx-auto'>
-        <label for='mfa_secret'>{{ 'Secret for manual setup'|trans }}</label>
-        <div class='input-group'>
-          <input class='form-control text-center' value='{{ mfaSecret|raw }}' id='mfa_secret' name='mfa_secret' type='password' readonly />
-          <div class='input-group-append'>
-            <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='mfa_secret'><i class='fas fa-eye' aria-hidden='true'></i></span>
+      <div class='text-center'>
+        <div class='mb-2'>
+          <img alt='mfa-qrcode' src='{{ mfaQRCodeImageDataUri|raw }}' />
+        </div>
+        <button type='button' class='btn btn-sm btn-secondary' data-action='toggle-next'>{{ 'Display secret for manual setup'|trans }}</button>
+        <div class='text-center col-md-8 mx-auto mt-2' hidden>
+          <div class='input-group'>
+            <div class='input-group-prepend'>
+              <button title='{{ 'Copy to clipboard'|trans }}' class='btn btn-outline-secondary' type='button' data-action='copy-to-clipboard' data-target='mfa_secret'><i class='fas fa-clone'></i></button>
+            </div>
+            <input class='form-control text-center' value='{{ mfaSecret|raw }}' id='mfa_secret' name='mfa_secret' readonly />
           </div>
         </div>
       </div>
-    {% endif %}
-    <div class='col-md-4 mx-auto mt-4 form-group'>
-      <i class='fas fa-mobile-screen fa-2x'></i>
-      <p id='mfa_code_help_block' class='form-text text-muted'>{{ 'Open the authenticator app on your device to get your authentication code and verify your identity.'|trans }}</p>
-      <label for='mfa_code'>{{ 'Authentication code'|trans }}</label>
-      <input class='form-control mb-4 text-center' id='mfa_code' name='mfa_code' type='text' pattern='.{6}' aria-describedby='mfa_code_help_block' data-focus='1' />
     </div>
-    <button type='submit' class='btn btn-primary' name='Submit' value='submit'>{{ 'Verify'|trans }}</button>
+
+  {% else %}
+    <div class='col-md-3 mx-auto my-4'>
+      <span class='border rounded p-2'><i class='fas fa-1'></i></span>
+      {{ 'Open your authenticator application'|trans }}
+    </div>
+  {% endif %}
+  <div class='col-md-3 mx-auto my-4 form-group'>
+    <p id='mfa_code_help_block' class='form-text'>
+      <span class='border rounded p-2'><i class='fas fa-2'></i></span>
+      {{ 'Enter the 6 digits displayed on your phone'|trans }}
+    </p>
+    <div class='input-group mb-4'>
+      <div class='input-group-prepend'>
+        <span class='input-group-text' id='mfaCodeLabel'>{{ 'Authentication code'|trans }}</span>
+        <input class='form-control brl-none' id='mfa_code' name='mfa_code' type='text' pattern='.{6}' aria-describedby='mfaCodeLabel' data-focus='1' />
+      </div>
+    </div>
+  </div>
+  <div class='text-center'>
     {% if App.Session.has('enable_mfa') %}
-      <button type='submit' class='btn btn-danger' name='Submit' value='cancel'>{{ 'Cancel'|trans }}</button>
+      <button type='submit' class='btn btn-danger mr-2' name='Submit' value='cancel'>{{ 'Cancel'|trans }}</button>
     {% endif %}
-  </form>
-</section>
+    <button type='submit' class='btn btn-primary' name='Submit' value='submit'>{{ 'Verify'|trans }}</button>
+  </div>
+</form>
 {% endblock body %}
