make error label smaller

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1012,6 +1012,10 @@ the form-control fails to do that so we do the border ourselves */
     font-size: 80%;
 }
 
+.small {
+    font-size: 80%;
+}
+
 /* ucp.php */
 #currpass {
     background-color: $lightblue;
