--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -259,7 +259,7 @@
             {%- if file.error -%}
               <hr>
               <span class='p-2 my-n2 mr-2'><i class='fas fa-triangle-exclamation fa-fw'></i></span>
-              <span class='p-1 rounded border mr-1 alert alert-danger'>{{ 'Error'|trans|upper }}</span> {{ file.error }}
+              <span class='p-1 rounded border mr-1 small alert alert-danger'>{{ 'Error'|trans|upper }}</span>{{ file.error }}
             {%- endif -%}
           </div>
         </li>
