--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -278,19 +278,56 @@
       <i class='fas fa-chevron-left mr-1 fa-fw'></i>{{ 'Back to listing'|trans }}
     </a>
   {% else %}
-      <ul class='list-group form-group sortable' data-axis='y' data-table='items_types'>
-        {% for itemType in itemsCategoryArr %}
+    <ul class='list-group form-group sortable' data-axis='y' data-table='items_types'>
+      {% for itemType in itemsCategoryArr %}
         <li class='box' id='itemstypes_{{ itemType.id }}' style='color: #{{ itemType.color }}'><span class='sortableHandle draggable mr-2'><i class='fas fa-grip-vertical fa-fw'></i></span><a href='?tab=4&amp;templateid={{ itemType.id }}#itemsCategoriesAnchor' aria-label='{{ 'Edit'|trans }} {{ itemType.title|e('html_attr') }}' title='{{ 'Edit'|trans }}' class='p-2 mr-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></a>{{ itemType.title }}</li>
-        {% endfor %}
-      </ul>
-      <p>{{ 'Use the handles to adjust the order in which the categories appear in the application.'|trans }}</p>
+      {% endfor %}
+    </ul>
+    <p>{{ 'Use the handles to adjust the order in which the categories appear in the application.'|trans }}</p>
   {% endif %}
 
     {# templateData will be loaded with content from an item type if templateid is present is url #}
     {% if Entity.entityData %}
       <div class='float-right'>
+        {% set lockIcon = 'fa-lock-open' %}
+        {% set alt = 'Enable/Disable exclusive edit mode'|trans %}
+        {% if Entity.ExclusiveEditMode.isActive %}
+            {% set lockIcon = 'fa-lock' %}
+        {% endif %}
+        <button
+          aria-label='{{ alt }}'
+          class='btn {{ Entity.ExclusiveEditMode.isActive ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 mr-2 lh-normal border-0'
+          data-action='toggle-exclusive-edit-mode'
+          id='exclusiveEditModeBtn'
+          title='{{ alt }}'
+          type='button'
+        >
+          <span class='fa-stack'>
+            <i class='fas {{ lockIcon }} fa-stack-1x fa-fw'></i>
+            <i class='fas fa-pen-nib fa-stack-1x fa-fw fa-rotate-by'></i>
+          </span>
+        </button>
         <button type='button' class='btn btn-danger' data-id='{{ Entity.id }}' data-action='itemstypes-destroy'>{{ 'Delete'|trans }}</button>
       </div>
+
+      {# Exclusive edit mode notification #}
+      <div id='exclusiveEditModeInfo'>
+        {% if Entity.ExclusiveEditMode.isActive %}
+          {% set writeLockNotice = 'You opened this entry in exclusive edit mode at %s.'|trans|format(
+              Entity.ExclusiveEditMode.dataArr.locked_at,
+            )|msg('warning', false) %}
+          {% if Entity.ExclusiveEditMode.dataArr.locked_by != Entity.Users.userid %}
+            {% set writeLockNotice = 'This entry is opened by %s in exclusive edit mode since %s. You cannot edit it now but remove the lock or %sRequest exclusive edit mode removal%s.'|trans|format(
+              Entity.ExclusiveEditMode.dataArr.fullname,
+              Entity.ExclusiveEditMode.dataArr.locked_at,
+              '<button type="button" class="btn btn-sm btn-secondary ml-2" data-action="request-exclusive-edit-mode-removal" data-id="%d" data-target-user="%s">'|format(Entity.id, Entity.ExclusiveEditMode.dataArr.locked_by),
+              '</button>'
+            )|msg('ko', false) %}
+          {% endif %}
+          {{ writeLockNotice|raw }}
+        {% endif %}
+      </div>
+
       <ul class='list-inline'>
         <li class='list-inline-item'>
           <label for='itemsTypesName'>{{ 'Name'|trans }}</label>
