exclusive edit mode

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1483,3 +1483,30 @@ input:checked + .slider::before {
 .counter {
     color: $secondlevel;
 }
+
+#exclusiveEditModeBtn {
+    span {
+        height: 1rem;
+        line-height: 1rem;
+        width: 1.25rem;
+
+        i:first-child {
+            top: -1.7px;
+        }
+
+        .fa-lock-open {
+            left: -2px;
+        }
+
+        .fa-lock {
+            left: -4px;
+        }
+
+        .fa-pen-nib {
+            --fa-rotate-angle: 45deg;
+            color:var(--primary);
+            left: 2px;
+            top: 4px;
+        }
+    }
+}
