--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -30,7 +30,7 @@
               <hr>
             </div>
             <select id='newFieldGroupSelect' class='form-control' autocomplete='off'>
-              {% if metadataGroups[0].id == -1 %}
+              {% if not metadataGroups or metadataGroups[0].id == -1 %}
                 <option value='-1'>{{ 'Undefined group'|trans }}</option>
               {% endif %}
               {% for group in metadataGroups %}
